# margin

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  Dockerfile  FABLE_REVIEW.md  HACKATHON_VIDEO_SCRIPT.md  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/src/tutor/: __init__.py  cli.py  runtime_capabilities.py
backend/src/tutor/api/: __init__.py  app.py  background_refresh.py  diagnosis_shadow.py  http_safety.py  observability.py  runtime_plugins.py  store.py  v2.py  v2_admission.py  v2_controls.py  v2_features.py  v2_fleet.py  v2_metrics.py  v2_persistence.py  v2_quarantine.py  v2_schemas.py  v2_store.py  v2_versions.py
backend/src/tutor/content/: __init__.py  chain_rule_release.py  chain_rule_reviewer_packet.py  compiler.py  exposure.py  ftc_draft_catalog.py  ftc_pedagogy_draft.py  ftc_release.py  ftc_reviewer_packet.py  item_bank.py  pending_reviewer_packet.py  product_quotient_attestations.py  product_quotient_release.py  product_quotient_reviewer_packet.py  publication.py  release_identity.py  review_artifacts.py  reviewer_packet.py  solve_quadratics_release.py  solve_quadratics_reviewer_packet.py  task_compilers.py  visible.py
backend/src/tutor/db/: __init__.py  base.py  migrate_session_v2.py  models.py  persistence.py  retention_job.py  session.py
backend/src/tutor/graph/: __init__.py  service.py
backend/src/tutor/learner/: __init__.py  evidence_trust.py  params.py  service.py  service_v2.py
backend/src/tutor/llm/: __init__.py  client.py  coaching.py  diagnostician.py  evaluator.py  factory.py  interaction.py  (+2 more)
backend/tests/: __init__.py  browser_v2_app.py  test_api.py  test_api_v2.py  test_api_v2_postgres.py  test_assessment_content.py  test_chain_rule_content_release.py  test_chain_rule_reviewer_packet.py  test_content_compiler.py  test_content_publication.py  test_db_models.py  test_diagnosis.py  test_diagnosis_shadow.py  test_diagnosis_v2.py  test_export_schemas.py  test_exposure_properties.py  test_exposure_resume_v2.py  test_ftc_authoring_schema.py  test_ftc_content_release.py  test_ftc_draft_source.py  test_ftc_pedagogy_source.py  test_ftc_reviewer_packet.py  test_ftc_task_compilers.py  test_graph.py  test_learner_service.py  test_learner_service_v2.py  test_llm_clients.py  test_llm_ports.py  test_machine_e2e.py  test_migrate_session_v2.py  test_observability.py  test_pack_import.py  test_pack_ingest.py  test_pedagogy_catalog.py  test_pedagogy_chain_rule_v2_assets.py  test_pedagogy_product_quotient_v2_assets.py  test_pedagogy_review_compiler.py  test_pedagogy_solve_quadratics_v2_assets.py  test_persistence.py  test_planner.py  (+31 more)
(+130 files in other folders)
