[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tutor"
version = "0.1.0"
description = "Adaptive math tutor — backend data layer (Phase 0)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "sqlalchemy>=2.0",
    "sympy>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "hypothesis>=6",
    "psycopg[binary]>=3.1",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
