[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tutor"
version = "0.1.0"
description = "Adaptive math tutor — backend data layer (Phase 0)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0",
    "sympy>=1.12",
]

[project.optional-dependencies]
dev = [
    "alembic>=1.13",
    "pytest>=8",
    "hypothesis>=6",
    "psycopg[binary]>=3.1",
    "ruff>=0.4",
    "fastapi>=0.111",
    "httpx>=0.27",
]
api = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
]
pilot = [
    "alembic>=1.13",
    "opentelemetry-api>=1.27",
    "opentelemetry-exporter-otlp>=1.27",
    "opentelemetry-sdk>=1.27",
    "psycopg[binary]>=3.1",
    "redis>=5.0",
]
llm = [
    "openai>=2.46,<3",
]
llm-anthropic = [
    "anthropic>=0.40",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"tutor.api" = [
    "static/dist/index.html",
    "static/dist/assets/*",
]
"tutor.packs" = ["*.csv"]
"tutor.seed" = ["*.json"]
"tutor.db.alembic" = ["script.py.mako"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
